--- a/src/pages/article/[...slug].astro
+++ b/src/pages/article/[...slug].astro
@@ -5,7 +5,7 @@ import ProvenanceBadge from '@/components/ProvenanceBadge.astro';
 import SignalPill from '@/components/SignalPill.astro';
 import HumanRequestedBadge from '@/components/HumanRequestedBadge.astro';
 import { formatDate, getReadingTime, extractDomain } from '@/lib/utils';
-import { loadProvenanceSync } from '@/lib/provenance';
+import { loadProvenance } from '@/lib/provenance';
 import { generateNewsArticleSchema, SITE } from '@/lib/seo';
 
 export async function getStaticPaths() {
@@ -26,7 +26,7 @@ const authorUrl = author_bot_id ? `/author/${author_bot_id}` : null;
 
 const { Content } = await article.render();
 const readingTime = getReadingTime(article.body);
-const provenance = loadProvenanceSync(article.slug);
+const provenance = await loadProvenance(article.slug);
 
 const canonicalUrl = `${SITE.url}/article/${article.slug}`;
 const articleSchema = generateNewsArticleSchema({
